# gem-imager

./: .gitignore  README.md  Taskfile.yml  appimagecraft.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml
debian/: control  copyright  gem-imager.install  gem-imager.manpages  gem-imager.metainfo.xml  org.t3gemstone.gem-imager.desktop  org.t3gemstone.gem-imager.policy  postinst  rules
doc/man/: gem-imager.1
embedded/: build.sh
src/: CMakeLists.txt  MsgPopup.qml  OptionsPopup.qml  UseSavedSettingsPopup.qml  cli.cpp  cli.h  config.h  devicewrapperfatpartition.cpp  devicewrapperstructs.h  dfuthread.cpp  dfuthread.h  dfuwrapper.cpp  dfuwrapper.h  downloadextractthread.cpp  downloadextractthread.h  downloadstatstelemetry.cpp  downloadthread.cpp  downloadthread.h  imagewriter.cpp  imagewriter.h  localfileextractthread.cpp  main.cpp  main.qml  priviligedprocess.cpp  priviligedprocess.h  qml.qrc  simpbootp.cpp  simpdhcp.cpp  simpdhcp.h  simptftp.cpp  tftpserver.cpp  tftpserver.h  u-boot.img  writeinplacethread.cpp  writeinplacethread.h
src/dependencies/crypt/: des.h  sha256crypt.c  shacrypt.h
src/dependencies/curl-8.11.0/: CMakeLists.txt
src/dependencies/dfu-util/: CMakeLists.txt  config.h  dfu.c  dfu.h  dfu_load.c  dfuse.c  main.c  portable.h  usb_dfu.h
src/dependencies/fat32format/: CMakeLists.txt
src/dependencies/libarchive-3.7.7/: CMakeLists.txt
src/dependencies/libarchive-3.7.9/: Makefile.in  config.h.in  configure
src/dependencies/libarchive-3.7.9/doc/html/: archive_entry.3.html  archive_entry_acl.3.html  archive_entry_linkify.3.html  archive_entry_misc.3.html  archive_entry_paths.3.html  archive_entry_perms.3.html  archive_entry_stat.3.html  archive_entry_time.3.html  archive_read.3.html  archive_read_add_passphrase.3.html  archive_read_data.3.html  archive_read_disk.3.html  archive_read_extract.3.html  archive_read_filter.3.html  archive_read_format.3.html  archive_read_free.3.html  archive_read_header.3.html  archive_read_new.3.html  archive_read_open.3.html  archive_read_set_options.3.html  archive_util.3.html  archive_write.3.html  archive_write_blocksize.3.html  archive_write_data.3.html  archive_write_disk.3.html  archive_write_filter.3.html  archive_write_finish_entry.3.html  archive_write_format.3.html  bsdtar.1.html  (+14 more)
src/dependencies/libusb-1.0.27/libusb/: config.h
src/dependencies/qtxmodem/: transfer.cpp  transfer.h
src/dependencies/shacrypt/: sha512crypt.c  sha512crypt.h
src/i18n/: gem-imager_ca.ts  gem-imager_de.ts  gem-imager_en.ts  gem-imager_es.ts  gem-imager_fr.ts  gem-imager_he.ts  gem-imager_it.ts  gem-imager_ja.ts  gem-imager_ko.ts  gem-imager_nl.ts  gem-imager_pl.ts  gem-imager_pt.ts  gem-imager_ru.ts  gem-imager_sk.ts  gem-imager_sl.ts  gem-imager_tr.ts  gem-imager_uk.ts  gem-imager_zh-TW.ts  gem-imager_zh.ts  rpi-imager_ko.ts  rpi-imager_zh-TW.ts  translations.qrc
src/icons/: gem-imager.icns
src/linux/: 99-gem-imager-dfu.rules  linuxdrivelist.cpp  org.t3gemstone.gem-imager.desktop
src/mac/: Info.plist.in
src/qmlcomponents/: ImButton.qml  ImButtonRed.qml  ImComboBox.qml
src/windows/: acceleratedcryptographichash_cng.cpp  dfudriverinstaller.cpp  dfudriverinstaller.h  gem-imager-cli.cmd  gem-imager-dfu.cat  gem-imager-dfu.inf  gem-imager.manifest  gem-imager.nsi.in  gem-imager.rc  sign-driver.ps1  t3-dfu.cer  winfile.cpp
tests/: conftest.py  test_urls.py  test_write_images.py
(+5 files in other folders)
